syntax="proto3";

package island;

option go_package="/";

import "google/protobuf/empty.proto";

service IslandService {
    rpc GetAllIslands(google.protobuf.Empty) returns (GetAllIslandsResponse) {}
    rpc GetIslandByID(GetIslandByIDRequest) returns (GetIslandByIDResponse) {}
    rpc GetIslandsByIDs(GetIslandsByIDsRequest) returns (GetIslandsByIDsResponse) {}
}

// GetAllIslands
message GetAllIslandsResponse {
    Header header = 1;
    repeated IslandData data = 2;
}

// GetIslandByID
message GetIslandByIDRequest {
    GetIslandByIDInput request = 1;
}

message GetIslandByIDInput {
    string id = 1;
}

message GetIslandByIDResponse {
    Header header = 1;
    IslandData data = 2;
}

// GetIslandsByIDs
message GetIslandsByIDsRequest {
    GetIslandsByIDsInput request = 1;
}

message GetIslandsByIDsInput {
    repeated string id = 1;
}

message GetIslandsByIDsResponse {
    Header header = 1;
    repeated IslandData data = 2;
}

// Base Data
message IslandData {
    string islandID = 1;
    string islandName = 2;
}

message Header {
    int32 status = 1;
    repeated string message = 2;
}

message OptionalString {
    string value = 1;
    bool hasSet = 2;
}
